--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^7.13.1",
+    "moment": "^2.24.0",
     "vue": "^2.5.2",
+    "vue-chat-scroll": "^1.3.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
